--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -13,3 +13,8 @@ button, input{
 li {
     list-style: none;
 }
+.flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
