--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -13,8 +13,15 @@ button, input{
 li {
     list-style: none;
 }
+a {
+    color:black;
+    text-decoration:none;
+}
 .flex {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+.mint-msgbox-confirm {
+    color: #f86a18 !important;
 }
