--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -5,7 +5,7 @@ html,body,div,ul,li,span,h1,h2,h3,h4,button,input,p {
     padding: 0;
     margin: 0;
 }
-button, input{
+button, input, textarea{
     border: none;
     outline: none;
     background: none;
