--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -36,7 +36,11 @@ a {
 }
 .back-icon {
     position: absolute;
-    left: 10px;
+    display: inline-block;
+    width: 40px;
+    height: 35px;
+    left: 0px;
     top:0;
     font-size: 12px;
+    cursor:pointer;
   }
